Code cleaned and added a very simple navigation

--- a/dadi/index.html
+++ b/dadi/index.html
@@ -25,6 +25,9 @@
         <button id="play-btn">Gioca!</button>
         <!-- Output msg -->
         <div id ="result"></div>
+
+        <a href="../index.html">Torna alla home</a>
+        <a href="../mail/index.html">Esercizio Email</a>
     </div>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
