--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href="./mail/index.html">Esercizio Email</a>
+    <a href="./dadi/index.html">Esercizio Dadi</a>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
