--- a/mail/index.html
+++ b/mail/index.html
@@ -15,6 +15,8 @@
         <input type="email" id="email-input">
         <button id="submit-btn"> Invia </button>
         <div id="email-check"></div>
+        <a href="../index.html">Torna alla home</a>
+        <a href="../dadi/index.html">Esercizio Dadi</a>
     </div>
     <!--Local JS -->
     <script type="text/javascript" src="./js/script.js"></script>
